add button for bot invit

--- a/index.html
+++ b/index.html
@@ -221,8 +221,8 @@
           <div class="text">
             The bot only needs basic permissions <b>in one channel</b> to be fully functional!
             All the features are unlocked without giving access to your precious server's admin pannel.
-            <br><b>Join the DraftBot's discord server to add the bot to your server: <a
-                href="https://discord.com/invite/5JqrMtZ" target="_blank" rel="noopener">Click here!</a></b>
+             <a href="https://discord.com/invite/5JqrMtZ" target="_blank" rel="noopener" class="button buttonGrey buttonLarge buttonUse"><i
+            class="fas fa-chevron-right buttonIcon"></i>Add Draftbot to your server</a>
           </div>
         </div>
       </div>
