--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
           <div class="text">
             The bot only needs basic permissions <b>in one channel</b> to be fully functional!
             All the features are unlocked without giving access to your precious server's admin pannel.
-             <a href="https://discord.com/invite/5JqrMtZ" target="_blank" rel="noopener" class="button buttonGrey buttonLarge buttonUse"><i
+             <a href="https://discordapp.com/api/oauth2/authorize?client_id=448110812801007618&permissions=280640&scope=bot" target="_blank" rel="noopener" class="button buttonGrey buttonLarge buttonUse"><i
             class="fas fa-chevron-right buttonIcon"></i>Add Draftbot to your server</a>
           </div>
         </div>
